If available, move bug into .leaflet-control-container to maintain predictable z-index across deployments. Closes #9

--- a/src/components/bug/bug.css
+++ b/src/components/bug/bug.css
@@ -4,7 +4,7 @@
 }
 
 .mz-bug-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 50%;
   margin-left: -144px;
